--- a/Technical-Documentation-Page/styles.css
+++ b/Technical-Documentation-Page/styles.css
@@ -1,7 +1,83 @@
+main {
+  display: flex;
+  flex-direction: row;
+}
+nav {
+  display: flex;
+  flex-direction: column;
+  width: 18%;
+  background-color: red;
+  height: 100%;
+  margin: -10px;
+  padding: 8px;
+  position: fixed;
+  z-index: 2;
+}
+
 .main-section {
   font-weight: bold;
 }
 
 .main-section p {
   font-weight: normal;
+}
+
+.nav-link {
+  margin-right: 4px;
+  color: black;
+}
+
+#sections {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20%;
+  z-index: 1;
+}
+
+#nav-bar__header {
+  display: inline !important;
+}
+
+#nav-bar__links {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (max-width: 500px) {
+  nav {
+    height: 4%;
+  }
+  .separator {
+    display: none;
+  }
+
+  #navbar {
+    display: flex;
+    justify-content: space-between;
+    font-size: 0.8rem;
+    flex-direction: row;
+    position: fixed;
+    padding: 20px;
+    width: 100%;
+    z-index: 2;
+  }
+  #sections {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 24%;
+    margin-left: 0;
+    z-index: 1;
+  }
+
+  #nav-bar__links {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 0.68rem;
+    margin-top: 0.05rem;
+    margin-right: 8%;
+    z-index: 1;
+  }
 }
