--- a/Survey-Form/styles.css
+++ b/Survey-Form/styles.css
@@ -2,14 +2,14 @@
   font-weight: bold;
 }
 
-.dropdown {
-  position: absolute;
+#dropdown {
+  position: absolute; 
   width: 155px;
   height: 1.4rem;
 }
 
 .number {
-  position: absolute;
+  position: absolute; 
   width: 145px;
 }
 
@@ -17,7 +17,7 @@
   font-family: Times New Roman, serif;
   font-size: 1rem;
   width: 100%;
-  height: 20vh;
+  height: 20vh
 }
 
 #submit {
